// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Navigation BackArrowButton 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <button
    disabled={false}
    style={
      Object {
        "backgroundColor": "#1d1d20",
        "border": "none",
        "borderRadius": "48px",
        "color": "#FFF",
        "cursor": "pointer",
        "display": "inline-block",
        "fill": "#FFF",
        "fontSize": "18px",
        "height": "60px",
        "margin": "0",
        "minHeight": "48px",
        "outline": "none",
        "padding": "0",
        "width": "60px",
      }
    }
  >
    <svg
      style={
        Object {
          "fill": "#FFF",
          "height": "60px",
          "width": "60px",
        }
      }
      viewBox="0 0 60 60"
    >
      <path
        d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Shared Components|Navigation BackButton 1`] = `
.c0 {
  width: calc(50% - 5px);
}

@media (min-width:1040px) {
  .c0 {
    width: 23.5%;
    -webkit-transform: translateX(255px);
    -ms-transform: translateX(255px);
    transform: translateX(255px);
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <button
    className="c0"
    disabled={false}
    style={
      Object {
        "backgroundColor": "#1d1d20",
        "border": "none",
        "borderRadius": "48px",
        "color": "#FFF",
        "cursor": "pointer",
        "display": "inline-block",
        "fill": "#FFF",
        "fontSize": "18px",
        "margin": "0",
        "minHeight": "48px",
        "outline": "none",
        "padding": "0",
      }
    }
    type="back"
  >
    <span>
      Back
    </span>
  </button>
</div>
`;

exports[`Storyshots Shared Components|Navigation NavigationContainer 1`] = `
.c0 {
  height: 155px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c1 {
  position: fixed;
  padding: 40px 0 36px;
  bottom: 0;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

@media (min-width:1040px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1040px) {
  .c1 {
    width: 1000px;
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <button
          disabled={false}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Navigation NextButton 1`] = `
.c0 {
  width: calc(50% - 5px);
}

@media (min-width:1040px) {
  .c0 {
    width: 23.5%;
    -webkit-transform: translateX(-255px);
    -ms-transform: translateX(-255px);
    transform: translateX(-255px);
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <button
    className="c0"
    disabled={false}
    style={
      Object {
        "backgroundColor": "#FFF",
        "border": "none",
        "borderRadius": "48px",
        "color": "#000",
        "cursor": "pointer",
        "display": "inline-block",
        "fill": "#FFF",
        "fontSize": "18px",
        "margin": "0",
        "minHeight": "48px",
        "outline": "none",
        "padding": "0",
      }
    }
    type="next"
  >
    <span>
      Next
    </span>
  </button>
</div>
`;

exports[`Storyshots Shared Components|Navigation PlusButton 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <button
    disabled={false}
    style={
      Object {
        "backgroundColor": "#FFF",
        "border": "none",
        "borderRadius": "48px",
        "color": "#000",
        "cursor": "pointer",
        "display": "inline-block",
        "fill": "#FFF",
        "fontSize": "18px",
        "height": "60px",
        "margin": "0",
        "minHeight": "48px",
        "outline": "none",
        "padding": "0",
        "width": "60px",
      }
    }
  >
    <svg
      style={
        Object {
          "fill": "#000",
          "height": "60px",
          "width": "60px",
        }
      }
      viewBox="0 0 60 60"
    >
      <path
        d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
        fillRule="evenodd"
      />
    </svg>
  </button>
</div>
`;
